--- a/templates/admin/owner/list/content.html.twig
+++ b/templates/admin/owner/list/content.html.twig
@@ -69,7 +69,7 @@
                                     <div class="col-lg-2 col-md-2 col-12 align-right">
                                         <ul class="action-btn">
                                             <li><a href="{{ path('app_owner_edit', {id: owner.id}) }}"><i class="lni lni-pencil"></i></a></li>
-                                            <li><a href="javascript:avoid(0)"><i class="lni lni-trash-can"></i></a></li>
+                                            <li><a href="javascript:avoid(0)"><i class="lni lni-trash"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
