--- a/templates/admin/property/create/content.html.twig
+++ b/templates/admin/property/create/content.html.twig
@@ -58,7 +58,7 @@
                                                     {{ form_row(form.price) }}
                                                 </div>
                                                 <div class="col-12">
-                                                    {{ form_row(form.type) }}
+                                                    {{ form_row(form.types) }}
                                                 </div>
                                                 <div class="col-lg-6 col-12">
                                                     {{ form_row(form.imageFile) }}
@@ -95,6 +95,8 @@
                                                     {{ form_row(form.images) }}
                                                 </div>
                                             </div>
+
+                                            {{ form_row(form.state) }}
 
                                         </div>
                                         <div class="button mb-0">
