--- a/templates/home/banner/categories/index.html.twig
+++ b/templates/home/banner/categories/index.html.twig
@@ -1,129 +1,102 @@
-<section class="categories">
-    <div class="container">
-        <div class="cat-inner">
+<div class="categories style2 pb-0">
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
             <div class="row">
-                <div class="col-12 p-0">
-                    <div class="category-slider">
+                
+                <div class="col-lg-3 col-md-3  col-12">
 
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/car.svg" alt="#">
-                            </div>
-                            <h3>Logements</h3>
-                            <h5 class="total">35</h5>
-                        </a>
+                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".6s">
+                        <div class="icon">
+                            <img src="{{ asset('build/images/categories/real-estate.svg') }}" alt="#">
+                        </div>
+                        <h3>Maisons</h3>
+                        {# <h5 class="total">65</h5> #}
+                    </a>
 
+                </div>
 
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/laptop.svg" alt="#">
-                            </div>
-                            <h3>Bureaux</h3>
-                            <h5 class="total">22</h5>
-                        </a>
+                <div class="col-lg-3 col-md-3  col-12">
 
+                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".4s">
+                        <div class="icon">
+                            <img src="{{ asset('build/images/categories/car.svg') }}" alt="#">
+                        </div>
+                        <h3>Bureaux</h3>
+                        {# <h5 class="total">35</h5> #}
+                    </a>
 
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/matrimony.svg" alt="#">
-                            </div>
-                            <h3>Matrimony</h3>
-                            <h5 class="total">55</h5>
-                        </a>
+                </div>
 
+                <div class="col-lg-3 col-md-3  col-12">
 
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/furniture.svg" alt="#">
-                            </div>
-                            <h3>Furnitures</h3>
-                            <h5 class="total">21</h5>
-                        </a>
+                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".8s">
+                        <div class="icon">
+                            <img src="{{ asset('build/images/categories/restaurant.svg') }}" alt="#">
+                        </div>
+                        <h3>Commerce</h3>
+                        {# <h5 class="total">22</h5> #}
+                    </a>
 
+                </div>
+                <div class="col-lg-3 col-md-3  col-12">
 
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/jobs.svg" alt="#">
-                            </div>
-                            <h3>Jobs</h3>
-                            <h5 class="total">44</h5>
-                        </a>
+                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay="1s">
+                        <div class="icon">
+                            <img src="{{ asset('build/images/categories/matrimony.svg') }}" alt="#">
+                        </div>
+                        <h3>Hotel</h3>
+                        {# <h5 class="total">55</h5> #}
+                    </a>
 
-
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/real-estate.svg" alt="#">
-                            </div>
-                            <h3>Real Estate</h3>
-                            <h5 class="total">65</h5>
-                        </a>
-
-
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/laptop.svg" alt="#">
-                            </div>
-                            <h3>Education</h3>
-                            <h5 class="total">35</h5>
-                        </a>
-
-
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/hospital.svg" alt="#">
-                            </div>
-                            <h3>Health & Beauty</h3>
-                            <h5 class="total">22</h5>
-                        </a>
-
-
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/tshirt.svg" alt="#">
-                            </div>
-                            <h3>Fashion</h3>
-                            <h5 class="total">25</h5>
-                        </a>
-
-
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/education.svg" alt="#">
-                            </div>
-                            <h3>Education</h3>
-                            <h5 class="total">42</h5>
-                        </a>
-
-
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/controller.svg" alt="#">
-                            </div>
-                            <h3>Gadgets</h3>
-                            <h5 class="total">32</h5>
-                        </a>
-
-
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/travel.svg" alt="#">
-                            </div>
-                            <h3>Backpacks</h3>
-                            <h5 class="total">15</h5>
-                        </a>
-
-
-                        <a href="category.html" class="single-cat">
-                            <div class="icon">
-                                <img src="assets/images/categories/watch.svg" alt="#">
-                            </div>
-                            <h3>Watches</h3>
-                            <h5 class="total">65</h5>
-                        </a>
-
-                    </div>
                 </div>
             </div>
+
+{#            <div class="row">#}
+{#                <div class="col-lg-3 col-md-3  col-12">#}
+
+{#                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".4s">#}
+{#                        <div class="icon">#}
+{#                            <img src="{{ asset('build/images/categories/car.svg') }}" alt="#">#}
+{#                        </div>#}
+{#                        <h3>Vehicle</h3>#}
+{#                        <h5 class="total">35</h5>#}
+{#                    </a>#}
+
+{#                </div>#}
+{#                <div class="col-lg-3 col-md-3  col-12">#}
+
+{#                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".6s">#}
+{#                        <div class="icon">#}
+{#                            <img src="{{ asset('build/images/categories/real-estate.svg') }}" alt="#">#}
+{#                        </div>#}
+{#                        <h3>Real Estate</h3>#}
+{#                        <h5 class="total">65</h5>#}
+{#                    </a>#}
+
+{#                </div>#}
+{#                <div class="col-lg-3 col-md-3  col-12">#}
+
+{#                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".8s">#}
+{#                        <div class="icon">#}
+{#                            <img src="{{ asset('build/images/categories/laptop.svg') }}" alt="#">#}
+{#                        </div>#}
+{#                        <h3>Electronics</h3>#}
+{#                        <h5 class="total">22</h5>#}
+{#                    </a>#}
+
+{#                </div>#}
+{#                <div class="col-lg-3 col-md-3  col-12">#}
+
+{#                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay="1s">#}
+{#                        <div class="icon">#}
+{#                            <img src="{{ asset('build/images/categories/matrimony.svg') }}" alt="#">#}
+{#                        </div>#}
+{#                        <h3>Matrimony</h3>#}
+{#                        <h5 class="total">55</h5>#}
+{#                    </a>#}
+
+{#                </div>#}
+{#            </div>#}
         </div>
     </div>
-</section>
+</div>
