--- a/templates/home/howitwork/index.html.twig
+++ b/templates/home/howitwork/index.html.twig
@@ -3,37 +3,53 @@
         <div class="row">
             <div class="col-12">
                 <div class="section-title">
-                    <h2 class="wow fadeInUp" data-wow-delay=".4s">How it Works</h2>
-                    <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
-                        Ipsum available, but the majority have suffered alteration in some form.</p>
+                    <h2 class="wow fadeInUp" data-wow-delay=".4s">Comment ça marche</h2>
+                    {#                    <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem#}
+                    {#                        Ipsum available, but the majority have suffered alteration in some form.</p>#}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-4 col-12">
 
-                <div class="single-work">
+                <div class="single-work wow fadeInUp" data-wow-delay=".2s">
                     <span class="serial">01</span>
-                    <h3>Create Account</h3>
-                    <p>Lorem ipsum dolor sit amet constur adipisicing sed do eiusmod tempor incididunt labore.</p>
+                    <h3>Propriétaires</h3>
+                    <p>Si vous souhaitez vendre ou mettre en location un logement, contacter nous par téléphone, mail, ou reseaux sociaux pour connaitre la procedure à suivre.</p>
+                    <div class="link-light mt-4">
+                        <a href="{{ path('app_contact') }}" class="btn">Aller à la page des contacts</a>
+                    </div>
+
                 </div>
 
             </div>
             <div class="col-lg-4 col-md-4 col-12">
 
-                <div class="single-work">
+                <div class="single-work wow fadeInUp" data-wow-delay=".4s">
                     <span class="serial">02</span>
-                    <h3>Post Your Ads</h3>
-                    <p>Lorem ipsum dolor sit amet constur adipisicing sed do eiusmod tempor incididunt labore.</p>
+                    <h3>Locataires</h3>
+                    <p>
+                        Nous mettons à votre disposition un catalogue de biens immobiliers pour la location et la vente. Faites une recherche et filtrer le resultat en fonction de vos critères.
+                    </p>
+                    <div class="link-light mt-4">
+                        <a href="{{ path('app_annonces') }}" class="btn">Voir notre catalogue</a>
+                    </div>
                 </div>
 
             </div>
             <div class="col-lg-4 col-md-4 col-12">
 
-                <div class="single-work">
+                <div class="single-work wow fadeInUp" data-wow-delay=".6s">
                     <span class="serial">03</span>
-                    <h3>Sell Your Item</h3>
-                    <p>Lorem ipsum dolor sit amet constur adipisicing sed do eiusmod tempor incididunt labore.</p>
+                    <h3>Informations</h3>
+                    <p>
+                        Pour de plus amples informations, veuillez nous contacter, par téléphone, mail, whatsapp... sur les réseaux sociaux Facebook et Twitter.
+                        
+                        Nous sommes à votre écoute.
+                    </p>
+                    <div class="link-light mt-4">
+                        <a href="{{ path('app_contact') }}" class="btn">Aller à la page des contacts</a>
+                    </div>
                 </div>
 
             </div>
