--- a/templates/admin/account/login/index.html.twig
+++ b/templates/admin/account/login/index.html.twig
@@ -8,7 +8,7 @@
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-12">
                 <div class="breadcrumbs-content">
-                    <h1 class="page-title">Admin Login</h1>
+                    <h1 class="page-title">Se connecter à l'administration</h1>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
@@ -28,27 +28,47 @@
             <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-12">
                 <div class="form-head">
                     <h4 class="title">Se connecter</h4>
-                    <form action="#!" method="post">
+                    <form action="{{ path('app_login') }}" method="post">
                         <div class="form-group">
+
                             {% if error %}
                                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                             {% endif %}
+
+                            {% if app.user %}
+                                <div class="mb-3">
+                                    You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                                </div>
+                            {% endif %}
+
                             <label>Email</label>
+
                             <input name="email" type="email" value="{{ last_username }}" id="inputEmail" class="form-control form-control-lg" autofocus>
+
                         </div>
+
                         <div class="form-group">
-                            <label>Password</label>
+
+                            <label>Mot de passe</label>
+
                             <input name="password" type="password" id="inputPassword" class="form-control form-control-lg">
+
                         </div>
+
                         <div>
+
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
                         </div>
 
                         <div class="button">
+
                             <button type="submit" class="btn">Connexion</button>
+
                         </div>
 
-                        <p class="outer-link">Vous n'avez pas de compte? <a href="{{ path('app_register') }}">Créez un ici</a>
+                        <p class="outer-link">
+                            Vous n'avez pas de compte? <a href="{{ path('app_register') }}">Créez un ici</a>
                         </p>
                     </form>
                 </div>
