--- a/templates/admin/account/register/index.html.twig
+++ b/templates/admin/account/register/index.html.twig
@@ -30,53 +30,20 @@
                 <div class="form-head">
                     <h4 class="title">Créer un compte</h4>
                     {{ form_start(form) }}
-                    {{ form_row(form.firstname, {attr: {'class': 'form-style'}}) }}
-                    {{ form_row(form.lastname, {attr: {'class': 'form-style'}}) }}
+                    {{ form_row(form.name, {attr: {'class': 'form-style'}}) }}
+
                     {{ form_row(form.email, {attr: {'class': 'form-style'}}) }}
                     {{ form_row(form.plainPassword, {attr: {'class': 'form-style'}}) }}
                     {{ form_row(form.avatarFile, {attr: {'class': 'form-style'}}) }}
-{#                    {{ form_row(form.agreeTerms) }}#}
                     <div class="button mt-4">
                         <button class="btn">Créer mon compte</button>
                     </div>
+
+                    <p class="outer-link">
+                        Vous avez déja un compte? <a href="{{ path('app_login') }}">Se connecter</a>
+                    </p>
                     {{ form_end(form) }}
                 </div>
-
-{#                    <form action="#" method="post">#}
-
-{#                        <div class="form-group">#}
-{#                            <label>Name</label>#}
-{#                            <input name="password" type="text">#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label>Email</label>#}
-{#                            <input name="email" type="email">#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label>Password</label>#}
-{#                            <input name="password" type="password">#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label>Confirm Password</label>#}
-{#                            <input name="password" type="password">#}
-{#                        </div>#}
-{#                        <div class="check-and-pass">#}
-{#                            <div class="row align-items-center">#}
-{#                                <div class="col-12">#}
-{#                                    <div class="form-check">#}
-{#                                        <input type="checkbox" class="form-check-input width-auto" id="exampleCheck1">#}
-{#                                        <label class="form-check-label">Agree to our <a href="javascript:void(0)">Terms and#}
-{#                                                Conditions</a></label>#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <div class="button">#}
-{#                            <button type="submit" class="btn">Enregistrer</button>#}
-{#                        </div>#}
-{#                        <p class="outer-link">Avez vous déja un compte? <a href="login.html"> Se Connecter Maintenant</a>#}
-{#                        </p>#}
-{#                    </form>#}
 
             </div>
         </div>
