--- a/templates/admin/partials/breadcrumb.html.twig
+++ b/templates/admin/partials/breadcrumb.html.twig
@@ -3,13 +3,13 @@
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-12">
                 <div class="breadcrumbs-content">
-                    <h1 class="page-title">Property Add</h1>
+                    <h1 class="page-title">Dashboard</h1>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
                 <ul class="breadcrumb-nav">
                     <li><a href="{{ path('app_home') }}">Accueil</a></li>
-                    <li>Property add</li>
+                    <li>Administration</li>
                 </ul>
             </div>
         </div>
