--- a/templates/admin/property/edit/content.html.twig
+++ b/templates/admin/property/edit/content.html.twig
@@ -54,7 +54,7 @@
                                                     {{ form_row(form.price) }}
                                                 </div>
                                                 <div class="col-12">
-                                                    {{ form_row(form.type) }}
+                                                    {{ form_row(form.types) }}
                                                 </div>
                                                 <div class="col-lg-4 col-12">
                                                     {{ form_row(form.imageFile) }}
@@ -96,6 +96,9 @@
                                                     {{ form_row(form.images) }}
                                                 </div>
                                             </div>
+
+                                                {{ form_row(form.state) }}
+
                                             <div class="row">
                                                 {% for image in property.images %}
                                                 <div class="col-md-3 mt-2">
