--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -125,8 +125,38 @@
 			a_configuration_option: 400
 		});
 
-		// $(".multi-select").select2();
-		// $('.select').select2();
+		tns({
+			slideBy: 'page',
+			autoplay: false,
+			mouseDrag: true,
+			gutter: 20,
+			nav: false,
+			controls: true,
+			controlsPosition: 'bottom',
+			controlsText: [
+				'<span class="prev"><i class="lni lni-chevron-left"></i></span>', 
+				'<span class="next"><i class="lni lni-chevron-right"></i></span>'
+			],
+			container: ".feature-product-carousel",
+			items: 1,
+			center: false,
+			autoplayTimeout: 5000,
+			swipeAngle: false,
+			speed: 400,
+			responsive: {
+				768: {
+					items: 2,
+				},
+
+				992: {
+					items: 2,
+				},
+
+				1200: {
+					items: 3,
+				}
+			}
+		});
 
 	</script>
 
