--- a/templates/home/chooseUs/index.html.twig
+++ b/templates/home/chooseUs/index.html.twig
@@ -40,10 +40,15 @@
 
                             <div class="single-list wow fadeInUp" data-wow-delay=".6s">
                                 <i class="lni lni-cog"></i>
-                                <h4>Sérieux</h4>
-                                <p>
+                                <h4>Confiance</h4>
+                                {# <p>
                                     Serieux et Rigueur sont les maitres mots de votre facon de travail. <br>
                                     Nous vous garantissons la transparence totale.
+                                </p> #}
+                                <p>
+                                    Rien ne se fait sans confiance. <br>
+                                    Nous faisons notre travail en toute transparence
+                                    avec des agents sérieux et dignes de confiance.
                                 </p>
                             </div>
 
