--- a/templates/home/cities/index.html.twig
+++ b/templates/home/cities/index.html.twig
@@ -1,33 +1,53 @@
 <section class="browse-cities section">
+
     <div class="container">
+
         <div class="row">
+
             <div class="col-12">
+
                 <div class="section-title">
+
                     <h2 class="wow fadeInUp" data-wow-delay=".4s">Les annonces par régions</h2>
-{#                    <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem#}
-{#                        Ipsum available, but the majority have suffered alteration in some form.#}
-{#                    </p>#}
+
                 </div>
+
             </div>
+
         </div>
+
         <div class="row ">
+
             <div class="col-lg-4 col-md-4 col-12">
 
                 <div class="single-city wow fadeInUp" data-wow-delay=".2s">
+
                     <a href="#" class="info-box">
+
                         <div class="image">
-                            <img src="{{ asset('build/images/cities/img1.jpg') }}" alt="#">
+
+                            {# <img src="{{ asset('build/images/cities/img1.jpg') }}" alt="#"> #}
+                            <img src="{{ asset('static/regions/Niamey/niamey1.jpg') | imagine_filter('state_image')}}" alt="#">
+
                         </div>
+
                         <div class="content">
+
                             <h4 class="name">
                                 Niamey
-                                <span>155 Ads</span>
+
+                                <span> {{ niamey | length }} Annonces</span>
+
                             </h4>
+
                         </div>
+
                         <div class="more-btn">
                             <i class="lni lni-circle-plus"></i>
                         </div>
+
                     </a>
+
                 </div>
 
             </div>
@@ -36,12 +56,13 @@
                 <div class="single-city wow fadeInUp" data-wow-delay=".4s">
                     <a href="category.html" class="info-box">
                         <div class="image">
-                            <img src="{{ asset('build/images/cities/img2.jpg') }}" alt="#">
+                            {# <img src="{{ asset('build/images/cities/img2.jpg') }}" alt="#"> #}
+                            <img src="{{ asset('static/regions/Dosso/dosso1.jpg') | imagine_filter('state_image') }}" alt="#">
                         </div>
                         <div class="content">
                             <h4 class="name">
                                 Dosso
-                                <span>288 Ads</span>
+                                <span>{{ dosso | length }} Annonces</span>
                             </h4>
                         </div>
                         <div class="more-btn">
@@ -56,12 +77,13 @@
                 <div class="single-city wow fadeInUp" data-wow-delay=".6s">
                     <a href="category.html" class="info-box">
                         <div class="image">
-                            <img src="{{ asset('build/images/cities/img3.jpg') }}" alt="#">
+                            {# <img src="{{ asset('build/images/cities/img3.jpg') }}" alt="#"> #}
+                            <img src="{{ asset('static/regions/Tahoua/tahoua1.jpg') | imagine_filter('state_image') }}" alt="#">
                         </div>
                         <div class="content">
                             <h4 class="name">
                                 Tahoua
-                                <span>95 Ads</span>
+                                <span>{{ tahoua | length }} Annonces</span>
                             </h4>
                         </div>
                         <div class="more-btn">
@@ -76,12 +98,13 @@
                 <div class="single-city wow fadeInUp" data-wow-delay=".2s">
                     <a href="category.html" class="info-box">
                         <div class="image">
-                            <img src="{{ asset('build/images/cities/img4.jpg') }}" alt="#">
+                            {# <img src="{{ asset('build/images/cities/img4.jpg') }}" alt="#"> #}
+                            <img src="{{ asset('static/regions/Maradi/m1.jpg') | imagine_filter('state_image_long') }}" alt="#">
                         </div>
                         <div class="content">
                             <h4 class="name">
                                 Maradi
-                                <span>355 Ads</span>
+                                <span>{{ maradi | length }} Annonces</span>
                             </h4>
                         </div>
                         <div class="more-btn">
@@ -96,12 +119,13 @@
                 <div class="single-city wow fadeInUp" data-wow-delay=".4s">
                     <a href="category.html" class="info-box">
                         <div class="image">
-                            <img src="{{ asset('build/images/cities/img5.jpg') }}" alt="#">
+                            {# <img src="{{ asset('build/images/cities/img5.jpg') }}" alt="#"> #}
+                            <img src="{{ asset('static/regions/Zinder/zind2.jpg') | imagine_filter('state_image_long') }}" alt="#">
                         </div>
                         <div class="content">
                             <h4 class="name">
                                 Zinder
-                                <span>76 Ads</span>
+                                <span>{{ zinder | length }} Annonces</span>
                             </h4>
                         </div>
                         <div class="more-btn">
@@ -117,12 +141,13 @@
                 <div class="single-city wow fadeInUp" data-wow-delay=".2s">
                     <a href="#" class="info-box">
                         <div class="image">
-                            <img src="{{ asset('build/images/cities/img1.jpg') }}" alt="#">
+                            {# <img src="{{ asset('build/images/cities/img1.jpg') }}" alt="#"> #}
+                            <img src="{{ asset('static/regions/Tillabery/t1.jpg') | imagine_filter('state_image') }}" alt="#">
                         </div>
                         <div class="content">
                             <h4 class="name">
                                 Tillaberi
-                                <span>155 Ads</span>
+                                <span>{{ tillaberi | length }} Annonces</span>
                             </h4>
                         </div>
                         <div class="more-btn">
@@ -137,12 +162,13 @@
                 <div class="single-city wow fadeInUp" data-wow-delay=".4s">
                     <a href="category.html" class="info-box">
                         <div class="image">
-                            <img src="{{ asset('build/images/cities/img2.jpg') }}" alt="#">
+                            {# <img src="{{ asset('build/images/cities/img2.jpg') }}" alt="#"> #}
+                            <img src="{{ asset('static/regions/Agadez/a1.jpg') | imagine_filter('state_image') }}" alt="#">
                         </div>
                         <div class="content">
                             <h4 class="name">
                                 Agadez
-                                <span>288 Ads</span>
+                                <span>{{ agadez | length }} Annonces</span>
                             </h4>
                         </div>
                         <div class="more-btn">
@@ -157,12 +183,13 @@
                 <div class="single-city wow fadeInUp" data-wow-delay=".6s">
                     <a href="category.html" class="info-box">
                         <div class="image">
-                            <img src="{{ asset('build/images/cities/img3.jpg') }}" alt="#">
+                            {# <img src="{{ asset('build/images/cities/img3.jpg') }}" alt="#"> #}
+                            <img src="{{ asset('static/regions/Diffa/d1.jpg') | imagine_filter('state_image') }}" alt="#">
                         </div>
                         <div class="content">
                             <h4 class="name">
                                 Diffa
-                                <span>95 Ads</span>
+                                <span>{{ diffa | length }} Annonces</span>
                             </h4>
                         </div>
                         <div class="more-btn">
