--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,13 +2,12 @@
 
 {% block body %}
 	{% include 'home/banner/index.html.twig' %}
-{#     {% include 'home/banner/categories/index.html.twig' %}#}
-{#    {% include 'home/banner/categories/index2.html.twig' %}#}
+
     {% include 'home/featured/index.html.twig' %}
     {% include 'home/trending/index.html.twig' %}
     {% include 'home/chooseUs/index.html.twig' %}
     {% include 'home/cities/index.html.twig' %}
     {% include 'home/action/index.html.twig' %}
-    {% include 'home/howitwork/index2.html.twig' %}
-{#    {% include 'home/news/index.html.twig' %}#}
+    {% include 'home/howitwork/index.html.twig' %}
+
 {% endblock %}
