--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -6,6 +6,8 @@
                     <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand" href="#">
                             <img src="{{ asset('build/images/logo/logo.svg') }}" alt="Logo">
+                            {# <img src="{{ asset('static/logo-haya.png') }}" alt="Logo" width="80" height="50"> #}
+
                         </a>
                         <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="toggler-icon"></span>
@@ -49,7 +51,8 @@
                                         Contact
                                     </a>
                                 </li>
-
+                                
+                                
                                 <li class="nav-item">
                                     <a 
                                         {% if route_name == "app_admin_index" %} class="active" {% endif %}
@@ -58,17 +61,26 @@
                                         Admin
                                     </a>
                                 </li>
+                                
                             </ul>
                         </div> 
+                        {% if app.user %}
                         <div class="login-button">
                             <ul>
-                                <li><a href="login.html"><i class="lni lni-enter"></i> Login</a></li>
-                                <li><a href="registration.html"><i class="lni lni-user"></i> Register</a></li>
+                                {# <li><a href="login.html"><i class="lni lni-enter"></i> Dashboard</a></li> #}
+                                <li>
+                                    <a 
+                                        {% if route_name == "app_admin_index" %} class="active" {% endif %}
+                                        href="{{ path('app_admin_index') }}" aria-label="Toggle navigation"
+                                    >
+                                        <i class="lni lni-enter"></i>
+                                        Administration
+                                    </a>
+                                </li>
+                                <li><a href="{{ path('app_register') }}"><i class="lni lni-user"></i> Register</a></li>
                             </ul>
                         </div>
-{#                        <div class="button header-button">#}
-{#                            <a href="post-item.html" class="btn">Post an Ad</a>#}
-{#                        </div>#}
+                        {% endif %}
                     </nav> 
                 </div>
             </div>
