--- a/templates/list/content/card.html.twig
+++ b/templates/list/content/card.html.twig
@@ -4,7 +4,9 @@
             <div class="image">
                 <a href="{{ path('app_annonce_detail', {slug: property.slug}) }}"><img src="{{ vich_uploader_asset(property) | imagine_filter('my_card_thumb')}}" alt="{{ property.title }}"></a>
                 <i class="cross-badge lni lni-bolt"></i>
-                <span class="flat-badge sale">{{ property.type }}</span>
+                {% for type in property.types %}
+                    <span class="flat-badge sale">{{ type.name }}</span>
+                {% endfor %}
             </div>
             <div class="content">
                 {% for category in property.categories %}
